        te laten tekenen. Zo doet een tool één ding: het maakt een element. Anders zouden de tools naast het tekenen ook ineens een datastructuur van elementen moeten
	    gaan onderhouden. 
	-   De tools waren ingewikkeld geïmplementeerd. Het was een enorm overervingsfeestje wat niet voor duidelijkheid zorgde (alle methodes leken overal van alles aan te roepen)
	    Met de nieuwe implementatie is er een tool die de events afvangt, en het tekenen gebeurt ergens anders. Seperation of concerns.
3.	De tweepunt tool maakt een drawnItem, die weer een lijst van DrawnElements bevat. Bij cirkels, vierkanten en een lijn zal deze lijst altijd een element bevatten. 
	Echter bij tekst en de pen, worden vele elementen toegevoegd (bijvoorbeeld bij tekst voor elke letter een element). Door deze te groeperen in DrawnItems kunnen
	tekstblokken in een keer gewist worden.
4.	Reset() method is toegevoegd aan de tool. Dit is ten behoeve van het groeperen van tekst elementen in een drawnItem. 

Bestanden:
1. Schets heeft een 'Export' methode gekregen om een file op te slaan als afbeelding.
2. Hoofdscherm heeft een 'Export' knop gekregen in het menu.
3. Er is een 'Read' klasse die XML files kan lezen toegevoegd.
4. De 'Write' klasse schrijft de objecten en hun variabelen naar een XML.

Colorpicker:
1. Lijst met kleuren bestaat niet meer, alle plaatsen waar deze gebruikt werd zijn hiervoor aangepast.
2. De kleuren kunnen nu via een ColorDialog ingesteld worden die met een knop of via het menu geopend wordt.
3. Variable lijndikte

Lijndikte:
1.	Lijn hebben een instelbare dikte
2. In de userinterface is er een slider en een label om dit aan te geven.

Bitmap resize:
1. Bitmap wordt opnieuw gemaakt als het window geresized wordt, zodat hij de afmetingen van het window heeft.

Overig:
1. Een nieuwe afbeelding kan nu met een keyboard shortcut geopend worden.