@@ -1,13 +1,0 @@
-﻿using System;
-using System.Collections.Generic;
-using System.Linq;
-using System.Text;
-
-namespace SchetsEditor.DrawingObjects
-{
-    class UndoItem
-    {
-        internal int index;
-        internal DrawnItem item;
-    }
-}
