@@ -3,7 +3,12 @@ using System.Drawing;
 
 namespace SchetsEditor
 {
-    public class TekstTool : StartpuntTool
+    // This tool makes bits of text. The text is saved letter by letter in a drawnElement, and these elements are grouped together in
+    // a single drawnItem (so they can be erased all together).
+    //
+    // What you can't see in this class definition is that when the user selects a new tool, Finalize() will also be called
+    // so the typed text is added as a new drawnElement.
+    public class TekstTool : OneDimensionalTool
     {
         public Text element;
         public Point startpunt;
@@ -11,6 +16,9 @@ namespace SchetsEditor
         public override void MuisVast(SchetsControl s, Point p)
         {
             startpunt = p;
+
+            // Call to finalize in case the user has typed text before this click. If this is the case, the previously typed text should be
+            // saved as one drawnItem, and we now need a new drawnItem.
             base.Finalize(s);
             base.MuisVast(s, p);
         }
@@ -19,6 +27,7 @@ namespace SchetsEditor
 
         public override void MuisDrag(SchetsControl s, Point p) { }
 
+        // User typed something. Add it as a new element to the DrawnItem!
         public override void Letter(SchetsControl s, char c)
         {
             if (c >= 32)
@@ -27,7 +36,7 @@ namespace SchetsEditor
                 Graphics g = s.MaakBitmapGraphics();
                 Font font = new Font("Tahoma", 40);
                 SizeF sz = g.MeasureString(tekst, font, startpunt, StringFormat.GenericTypographic);
-
+                
                 element = new Text()
                 {
                     pointA = startpunt,
